manifests/longhorn-nextcloud-app/1-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nextcloud
  labels:
    app.kubernetes.io/name: nextcloud
    managed-by: talos-hetzner
